--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,17 @@
     -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <title>React App</title>
+
+    <!-- CSS Plugins -->
+
+
+
+    <!-- Font Google -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet">
+
+    <!-- main CSS -->
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
